--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -16,13 +16,13 @@
 	  <div class="form-group">
 	    <label for="user" class="col-sm-2 control-label">用户名：</label>
 	    <div class="col-sm-10">
-	      <input type="text" class="form-control" id="user" name="user" value="xiaobenhaier">
+	      <input type="text" class="form-control" id="user" name="user" value="ylcdcd">
 	    </div>
 	  </div>
 	  <div class="form-group">
 	    <label for="pass" class="col-sm-2 control-label">密&nbsp;&nbsp;码：</label>
 	    <div class="col-sm-10">
-	      <input type="text" class="form-control" id="pass" name="pass" value="chudan1989123">
+	      <input type="text" class="form-control" id="pass" name="pass" value="xdb1989123">
 	    </div>
 	  </div>
 	  <div class="form-group">
