1、文件已存在 2、undefined 3、增加状态获取

--- a/Application/Home/View/Index/commitFile.html
+++ b/Application/Home/View/Index/commitFile.html
@@ -11,7 +11,9 @@
     <link href="__PUBLIC__/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
-	<h1>总共上传 <strong>{$count}</strong> 条记录。开始时间：{$starttime}。结束时间：{$endtime}</h1>
+  <h3>总共上传 <strong>{$count}</strong> 条记录</h3>
+  <h3>开始时间：{$starttime}</h3>
+  <h3>结束时间：{$endtime}</h3>
   <a href="__URL__/index" class="btn btn-primary">返回首页</a>
 	<table class="table table-striped table-bordered table-hover">
 		<tr>
